# RubiksCubeSolver

./: CMakeLists.txt  GenericRubiksCube.cpp  GenericRubiksCube.h  README.md  main.cpp
Model/: GenericRubiksCube.cpp  GenericRubiksCube.h  RubiksCube1dArrary.cpp  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp  RubiksCubeBitboard.cpp
PatternDatabases/: CornerDBMaker.cpp  CornerDBMaker.h  CornerPatternDatabase.cpp  CornerPatternDatabase.h  NibbleArray.cpp  NibbleArray.h  PatternDatabase.cpp  PatternDatabase.h  PermutationIndexer.h  math.cpp  math.h
Solver/: BFSSolver.h  DFSSolver.h  IDAstarSolver.h  IDDFSSolver.h
